made the generators to a fixed height so they won't slide off page and added a custom scrollbar. Also made a small event to change the generator's position a bit to fit the new scrollbar. Also changed a lot of tabs into spaces...

--- a/css/main.css
+++ b/css/main.css
@@ -1,20 +1,20 @@
 /* Fonts: */
 @font-face {
-	font-family: carmela;
-	src: url(../assets/carmela.ttf);
+  font-family: carmela;
+  src: url(../assets/carmela.ttf);
 }
 @font-face {
-	font-family: frankruehl;
-	src: url(../assets/frankruehlclm-medium-webfont.woff);
+  font-family: frankruehl;
+  src: url(../assets/frankruehlclm-medium-webfont.woff);
 }
 
 /* General elements */
 body {
-	font-family: carmela;
-	direction: rtl;
-	background: url(../assets/bg.svg);
-	background-size: 100vw 100vh;
-	background-repeat: no-repeat;
+  font-family: carmela;
+  direction: rtl;
+  background: url(../assets/bg.svg);
+  background-size: 100vw 100vh;
+  background-repeat: no-repeat;
 }
 
 
@@ -25,89 +25,89 @@ body {
 /*******************/
 
 #note {
-	width: 208px;
-	height: 296px;
-	background-color: white;
-	outline-style: solid;
-	outline-width: 1px;
-	box-shadow: 0px 0px 10px;
-	position: absolute;
-	top: 85px;
-	left: 50%;
-	margin-right: -50%;
-	/*-webkit-transform: translate(-50%, -50%); */
-	transform: translate(-50%, 0);
+  width: 208px;
+  height: 296px;
+  background-color: white;
+  outline-style: solid;
+  outline-width: 1px;
+  box-shadow: 0px 0px 10px;
+  position: absolute;
+  top: 85px;
+  left: 50%;
+  margin-right: -50%;
+  /*-webkit-transform: translate(-50%, -50%); */
+  transform: translate(-50%, 0);
 }
 
 #note > input,
 #note > textarea {
-	font-family: frankruehl;
-	width: 200px;
-	direction: rtl;
-	position: absolute;
-	text-align: center;
-	border-style: none;
+  font-family: frankruehl;
+  width: 200px;
+  direction: rtl;
+  position: absolute;
+  text-align: center;
+  border-style: none;
   overflow: hidden;
 }
 
 #note > *:focus {
-	outline: 0;
+  outline: 0;
 }
 
 #noteTitle {
-	font-size: 120px;
-	top: 20%;
-	left: 4px;
+  font-size: 120px;
+  top: 20%;
+  left: 4px;
 }
 
 #noteSubtitle {
-	font-size: 25px;
-	bottom: 10px;
-	resize: none;
-	left: 2px;
+  font-size: 25px;
+  bottom: 10px;
+  resize: none;
+  left: 2px;
 }
 
 #note:hover {
-	box-shadow: 0px 0px 10px;
+  box-shadow: 0px 0px 10px;
 }
 
 #note:active {
-	box-shadow: 0px 0px 0px;
+  box-shadow: 0px 0px 0px;
 }
 
 .noteHint {
-	position: absolute;
-	top: 400px;
-	left: 50%;
-	transform: translate(-50%);
-	color: white;
+  position: absolute;
+  top: 400px;
+  left: 50%;
+  transform: translate(-50%);
+  color: white;
 }
 
 #votesNumText {
-	font-size: 48px;
-	position: absolute;
-	top: 410px;
-	left: 50%;
-	transform: translate(-50%,0);
-	color: white;
+  font-size: 48px;
+  position: absolute;
+  top: 410px;
+  left: 50%;
+  transform: translate(-50%,0);
+  color: white;
 }
 
 #kolotBakalpi {
-	font-size: 30px;
-	position: absolute;
-	top: 460px;
-	left: 50%;
-	transform: translate(-50%,0);
-	color: white;
+  font-size: 30px;
+  position: absolute;
+  top: 460px;
+  left: 50%;
+  transform: translate(-50%,0);
+  color: white;
 }
 
 #votesPerSecText {
-	font-size: 14px;
-	position: absolute;
-	top: 495px;
-	left: 50%;
-	transform: translate(-50%,0);
-	color: #6fcaff;
+  font-size: 14px;
+  position: absolute;
+  top: 495px;
+  left: 50%;
+  transform: translate(-50%,0);
+  color: #6fcaff;
 }
 
 /***************/
@@ -138,74 +138,78 @@ body {
 /*********************/
 
 #generators {
-	position: absolute;
-	top: 110px;
-	left: 0%;
-	
-  /*  Prevents scrolling outside of page size */
-  overflow: hidden;
+  position: absolute;
+  top: 110px;
+  left: 0%;
+  height: 510px;
+  
+  /* Prevents scrolling outside of page size */
+  overflow-x: hidden;
+  /* Allow scrolling when we have too many generators */
+  overflow-y: auto;
 }
 
 .genBtn {
-	background: linear-gradient(#a1cfe5, #65a8c9);
-	width: 350px;
-	height: 65px;
-	left: -100%;
-	cursor: pointer;
-	position: relative;
-	color: grey;
+  background: linear-gradient(#a1cfe5, #65a8c9);
+  width: 350px;
+  height: 65px;
+  left: -100%;
+  cursor: pointer;
+  position: relative;
+  color: grey;
+  display: none;
 }
 
 /* Button color when is purchasable */
 .genBtnAvailable {
-	color: white;
+  color: white;
 }
 
 .genBtn > * {
-	position: absolute;
+  position: absolute;
 }
 
 .genBtnPrice {
-	font-size: 18px;
-	font-weight: bold;
-	top: 8px;
-	right: 70px;
+  font-size: 18px;
+  font-weight: bold;
+  top: 8px;
+  right: 70px;
 }
 
 .genBtnDesc {
-	font-size: 14px;
-	top: 35px;
-	right: 70px;
-	line-height: 90%;
-	left: 50px;
+  font-size: 14px;
+  top: 35px;
+  right: 70px;
+  line-height: 90%;
+  left: 50px;
 }
 
 .genBtnLvl {
-	font-size: 72px;
-	top: -5px;
-	left: 27px;
-	opacity: 0.5;
-	transform: translate(-40%,0);
+  font-size: 72px;
+  top: -5px;
+  left: 27px;
+  opacity: 0.5;
+  transform: translate(-40%,0);
 }
 
 .genBtnSummary {
-	background-color: black;
-	opacity: 0.75;
-	color: white;
-	width: 285px;
-	height: 65px;
-	left: 0%;
-	text-align: center;
-	display: none;
+  background-color: black;
+  opacity: 0.75;
+  color: white;
+  width: 285px;
+  height: 65px;
+  left: 0%;
+  text-align: center;
+  display: none;
 }
 
 .genBtnSummary > p {
-	position: relative;
-	top: 10px;
+  position: relative;
+  top: 10px;
 }
 
 .genBtn:hover > .genBtnSummary {
-	display: inline;
+  display: inline;
 }
 
 /*************/
@@ -213,17 +217,17 @@ body {
 /*************/
 
 #upgrades {
-	background-color: #d1d6d3;
-	position: absolute;
-	right: 0%;
-	top: 110px;
-	height: 510px;
-	border-radius: 25px 0px 0px 25px;
-	border: 3px solid #959595;
-	width: 350px;
-	border-right-style: none;
-	padding-top: 18px;
-	box-shadow: 0 0 10px 2px;
+  background-color: #d1d6d3;
+  position: absolute;
+  right: 0%;
+  top: 110px;
+  height: 510px;
+  border-radius: 25px 0px 0px 25px;
+  border: 3px solid #959595;
+  width: 350px;
+  border-right-style: none;
+  padding-top: 18px;
+  box-shadow: 0 0 10px 2px;
 }
 
 .upgrade {
@@ -231,15 +235,15 @@ body {
 }
 
 .upgrade > div {
-	position: absolute;
-	height: 47px;
-	width: 320px;
-	background-color: white;
-	border-radius: 9px;
-	font-size: 15px;
-	padding-top: 5px;
-	margin-right: 14px;
-	margin-left: 4px;
+  position: absolute;
+  height: 47px;
+  width: 320px;
+  background-color: white;
+  border-radius: 9px;
+  font-size: 15px;
+  padding-top: 5px;
+  margin-right: 14px;
+  margin-left: 4px;
 }
 
 .upgrade.deactivated {
@@ -262,15 +266,15 @@ body {
 First text div under upgrade button is the bolded price
 */
 .upgrade > div > div:first-child {
-	font-weight: bold;
-	margin-bottom: 8px;
+  font-weight: bold;
+  margin-bottom: 8px;
   margin-top: 3px;
 }
 
 .upgrade > img {
-	position: absolute;
-	margin-top: -2px;
-	margin-right: -70px;
-	height: 56px;
-	-webkit-filter: drop-shadow(-3px 0px 3px rgba(0, 0, 0, 0.4));
+  position: absolute;
+  margin-top: -2px;
+  margin-right: -70px;
+  height: 56px;
+  -webkit-filter: drop-shadow(-3px 0px 3px rgba(0, 0, 0, 0.4));
 }
